Changed files to .h instead of .c

--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -7,3 +7,6 @@ G:\ASU\CSE-2\Embedded Systems\GPS Project\gps-project.uvproj
 Project File Date:  05/31/2021
 
 <h2>Output:</h2>
+</pre>
+</body>
+</html>
