--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -4,9 +4,24 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 G:\ASU\CSE-2\Embedded Systems\GPS Project\gps-project.uvproj
-Project File Date:  05/31/2021
+Project File Date:  06/03/2021
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Build target 'Target 1'
+compiling main.c...
+linking...
+Program Size: Code=20636 RO-data=1540 RW-data=40 ZI-data=824  
+".\gps-project.axf" - 0 Error(s), 0 Warning(s).
+.
+.\gps-project.axf: Error: L6218E: Undefined symbol data_length (referred from main.o).
+.\gps-project.axf: Error: L6218E: Undefined symbol str (referred from main.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 3 error messages.
+".\gps-project.axf" - 3 Error(s), 0 Warning(s).
+Target not created
+o).
+.\gps-project.axf: Error: L6218E: Undefined symbol str (referred from main.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 2 error messages.
+".\gps-project.axf" - 2 Error(s), 3 Warning(s).
+Target not created
