--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -4,24 +4,9 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 G:\ASU\CSE-2\Embedded Systems\GPS Project\gps-project.uvproj
-Project File Date:  06/03/2021
+Project File Date:  06/04/2021
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
-assembling startup_TM4C123.s...
-compiling main.c...
-linking...
-Program Size: Code=13940 RO-data=1148 RW-data=44 ZI-data=724  
-".\gps-project.axf" - 0 Error(s), 0 Warning(s).
-: Undefined symbol data_length (referred from main.o).
-.\gps-project.axf: Error: L6218E: Undefined symbol str (referred from main.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 3 error messages.
-".\gps-project.axf" - 3 Error(s), 0 Warning(s).
-Target not created
-o).
-.\gps-project.axf: Error: L6218E: Undefined symbol str (referred from main.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 2 error messages.
-".\gps-project.axf" - 2 Error(s), 3 Warning(s).
-Target not created
+</pre>
+</body>
+</html>
