--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -7,6 +7,8 @@ G:\ASU\CSE-2\Embedded Systems\GPS Project\gps-project.uvproj
 Project File Date:  06/04/2021
 
 <h2>Output:</h2>
-</pre>
-</body>
-</html>
+Build target 'Target 1'
+compiling main.c...
+linking...
+Program Size: Code=14180 RO-data=1148 RW-data=52 ZI-data=724  
+".\gps-project.axf" - 0 Error(s), 0 Warning(s).
