--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -12,3 +12,6 @@ compiling main.c...
 linking...
 Program Size: Code=14180 RO-data=1148 RW-data=52 ZI-data=724  
 ".\gps-project.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
