Changed floats to doubles for higher precision

--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -10,5 +10,18 @@ Project File Date:  06/04/2021
 Build target 'Target 1'
 compiling main.c...
 linking...
-Program Size: Code=14180 RO-data=1148 RW-data=52 ZI-data=724  
+Program Size: Code=13028 RO-data=1148 RW-data=80 ZI-data=728  
 ".\gps-project.axf" - 0 Error(s), 0 Warning(s).
+
+f" - 0 Error(s), 0 Warning(s).
+erned by GPGGA_functions.h
+main.c(12): error:  #147: declaration is incompatible with "char *data[14]" (declared at line 6 of "Extract-Coordinates.h")
+  char *data[15]; //(externed in GPGGA_functions.h) (to split GPGGA into tokens)
+main.c: 0 warnings, 2 errors
+".\gps-project.axf" - 2 Error(s), 0 Warning(s).
+Target not created
+rnings, 0 errors
+linking...
+Program Size: Code=14212 RO-data=1148 RW-data=80 ZI-data=728  
+".\gps-project.axf" - 0 Error(s), 4 Warning(s).
+d
