Added rechecking for gps fix

--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -4,17 +4,12 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 G:\ASU\CSE-2\Embedded Systems\GPS Project\gps-project.uvproj
-Project File Date:  06/05/2021
+Project File Date:  06/06/2021
 
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling main.c...
 linking...
-Program Size: Code=15156 RO-data=1148 RW-data=168 ZI-data=728  
+Program Size: Code=13588 RO-data=1148 RW-data=136 ZI-data=728  
 ".\gps-project.axf" - 0 Error(s), 0 Warning(s).
-f" - 0 Error(s), 0 Warning(s).
-ay not appear after executable statement in block
-        float prev_lat, prev_long, current_lat, current_long;
-main.c: 0 warnings, 2 errors
-".\gps-project.axf" - 2 Error(s), 0 Warning(s).
-Target not created
+xf" - 0 Error(s), 0 Warning(s).
