--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -10,5 +10,36 @@ Project File Date:  06/06/2021
 Build target 'Target 1'
 compiling main.c...
 linking...
-Program Size: Code=13780 RO-data=1148 RW-data=136 ZI-data=728  
+Program Size: Code=16444 RO-data=1148 RW-data=148 ZI-data=724  
 ".\gps-project.axf" - 0 Error(s), 0 Warning(s).
+Load "G:\\ASU\\CSE-2\\Embedded Systems\\GPS Project\\gps-project.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
+</pre>
+</body>
+</html>
+dded Systems\\GPS Project\\gps-project.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
+(int)(time/100) - time);
+Extract-Coordinates.h(29): error:  #147: declaration is incompatible with "double time" (declared at line 28)
+        time = (int)(time/10000)*60*60 + ((int)(time/100) - (int)(time/10000)*100)*60 + ((int)(time/100) - time);
+Extract-Coordinates.h(29): error:  #28: expression must have a constant value
+        time = (int)(time/10000)*60*60 + ((int)(time/100) - (int)(time/10000)*100)*60 + ((int)(time/100) - time);
+Extract-Coordinates.h(29): error:  #28: expression must have a constant value
+        time = (int)(time/10000)*60*60 + ((int)(time/100) - (int)(time/10000)*100)*60 + ((int)(time/100) - time);
+Extract-Coordinates.h(29): error:  #28: expression must have a constant value
+        time = (int)(time/10000)*60*60 + ((int)(time/100) - (int)(time/10000)*100)*60 + ((int)(time/100) - time);
+Extract-Coordinates.h(29): error:  #28: expression must have a constant value
+        time = (int)(time/10000)*60*60 + ((int)(time/100) - (int)(time/10000)*100)*60 + ((int)(time/100) - time);
+Extract-Coordinates.h(29): error:  #28: expression must have a constant value
+        time = (int)(time/10000)*60*60 + ((int)(time/100) - (int)(time/10000)*100)*60 + ((int)(time/100) - time);
+Extract-Coordinates.h(31): error:  #169: expected a declaration
+  }//
+main.c: 0 warnings, 10 errors
+".\gps-project.axf" - 10 Error(s), 0 Warning(s).
+Target not created
