--- a/gps-project.build_log.htm
+++ b/gps-project.build_log.htm
@@ -8,10 +8,16 @@ Project File Date:  06/12/2021
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling main.c...
 linking...
 Program Size: Code=16740 RO-data=1148 RW-data=156 ZI-data=724  
 ".\gps-project.axf" - 0 Error(s), 0 Warning(s).
-</pre>
-</body>
-</html>
+Load "G:\\ASU\\CSE-2\\Embedded Systems\\GPS Project\\gps-project.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Erase Done.
+Programming Done.
+Verify OK.
+g Done.
+Verify OK.
+e.
+Programming Done.
+Verify OK.
