--- a/gps-project.htm
+++ b/gps-project.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\gps-project.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\gps-project.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sun Jun 13 04:13:14 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sun Jun 13 15:03:45 2021
 <BR><P>
 <H3>Maximum Stack Usage =        416 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -1276,14 +1276,12 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;lcd_cmd
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_all
-<LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_int
 </UL>
 
-<P><STRONG><a name="[a4]"></a>print_int</STRONG> (Thumb, 156 bytes, Stack size 16 bytes, main.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = print_int &rArr; lcd_ready &rArr; lcd_cmd
+<P><STRONG><a name="[a4]"></a>print_int</STRONG> (Thumb, 150 bytes, Stack size 16 bytes, main.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 20<LI>Call Chain = print_int &rArr; lcd_data
 </UL>
-<BR>[Calls]<UL><LI><a href="#[a3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;lcd_ready
-<LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;lcd_data
+<BR>[Calls]<UL><LI><a href="#[a2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;lcd_data
 <LI><a href="#[a0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;lcd_cmd
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_all
@@ -1309,7 +1307,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[a7]"></a>print_all</STRONG> (Thumb, 36 bytes, Stack size 12 bytes, main.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = print_all &rArr; print_int &rArr; lcd_ready &rArr; lcd_cmd
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = print_all &rArr; print_int &rArr; lcd_data
 </UL>
 <BR>[Calls]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_str
 <LI><a href="#[a4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_int
